--- a/ansible/roles/web/handlers/main.yml
+++ b/ansible/roles/web/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Nginx
+- name: Restart Nginx
   ansible.builtin.service:
     name: nginx
-    state: reloaded
+    state: restarted
   become: yes
