--- a/ansible/roles/web/handlers/main.yml
+++ b/ansible/roles/web/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Nginx
+- name: Reload Nginx
   ansible.builtin.service:
     name: nginx
-    state: restarted
+    state: reloaded
   become: yes
