--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -99,53 +99,38 @@
       community.crypto.openssl_privatekey:
         path: /etc/ssl/private/selfsigned.key
         size: 4096
+        type: RSA
         mode: 0600
         owner: root
         group: root
       tags: ssl
       become: yes
 
-    - name: Generate self-signed certificate
-      community.crypto.x509_certificate:
-        path: /etc/ssl/certs/selfsigned.crt
-        privatekey_path: /etc/ssl/private/selfsigned.key
-        provider: selfsigned
-        selfsigned_digest: sha256
-        selfsigned_notBefore: "{{ ansible_date_time.iso8601 }}"
-        selfsigned_notAfter: "+365d"
+    - name: Generate CSR with subject and SAN
+      community.crypto.openssl_csr_pipe:
+        common_name: "{{ nginx_domains[0] }}"
         subject:
           C: RU
           ST: SPb
           L: Saint-Petersburg
           O: Example Org
           OU: IT Department
-          CN: "{{ nginx_domains[0] }}"
-        subject_alt_name:
+        subject_alt_name: 
           - "DNS:{{ item }}"
+        privatekey_path: /etc/ssl/private/selfsigned.key
       loop: "{{ nginx_domains }}"
+      register: csr
       tags: ssl
-      notify: Reload Nginx
-      become: yes
 
-- name: Update Nginx SSL configuration
-  block:
-    - name: Configure SSL params
-      ansible.builtin.template:
-        src: ssl_params.conf.j2
-        dest: /etc/nginx/snippets/ssl_params.conf
-        owner: root
-        group: root
-        mode: 0644
-      notify: Reload Nginx
-      become: yes
-
-    - name: Update virtual hosts for SSL
-      ansible.builtin.template:
-        src: sites.conf.j2
-        dest: "/etc/nginx/sites-available/{{ item }}.conf"
-        owner: root
-        group: root
-        mode: 0644
-      loop: "{{ nginx_domains }}"
+    - name: Generate self-signed certificate
+      community.crypto.x509_certificate:
+        path: /etc/ssl/certs/{{ item.item }}.crt
+        privatekey_path: /etc/ssl/private/selfsigned.key
+        csr_content: "{{ item.csr }}"
+        provider: selfsigned
+        selfsigned_digest: sha256
+        selfsigned_not_after: "+365d"
+      loop: "{{ csr.results }}"
+      tags: ssl
       notify: Reload Nginx
       become: yes
