--- a/ansible/roles/web/tasks/main.yml
+++ b/ansible/roles/web/tasks/main.yml
@@ -61,12 +61,33 @@
       tags: nginx
       become: yes
 
+    - name: Remove default Nginx site
+      ansible.builtin.file:
+        path: "{{ item }}"
+        state: absent
+      loop:
+        - /etc/nginx/sites-enabled/default
+        - /etc/nginx/sites-available/default
+      tags: nginx
+      become: yes
+
     - name: Update Nginx main config
       ansible.builtin.lineinfile:
         path: /etc/nginx/nginx.conf
         regexp: 'include /etc/nginx/sites-enabled/\*;'
         line: 'include /etc/nginx/sites-enabled/*.conf;'
         backrefs: yes
+      notify: Reload Nginx
+      tags: nginx
+      become: yes
+
+    - name: Deploy default server configuration
+      ansible.builtin.template:
+        src: default.conf.j2
+        dest: "/etc/nginx/sites-available/000-default.conf"
+        owner: root
+        group: root
+        mode: 0644
       notify: Reload Nginx
       tags: nginx
       become: yes
@@ -81,6 +102,25 @@
       loop: "{{ nginx_domains }}"
       vars:
         domain: "{{ item }}"
+      notify: Reload Nginx
+      tags: nginx
+      become: yes
+
+    - name: Enable default site
+      ansible.builtin.file:
+        src: "/etc/nginx/sites-available/000-default.conf"
+        dest: "/etc/nginx/sites-enabled/000-default.conf"
+        state: link
+      notify: Reload Nginx
+      tags: nginx
+      become: yes
+
+    - name: Enable domain sites
+      ansible.builtin.file:
+        src: "/etc/nginx/sites-available/{{ item }}.conf"
+        dest: "/etc/nginx/sites-enabled/{{ item }}.conf"
+        state: link
+      loop: "{{ nginx_domains }}"
       notify: Reload Nginx
       tags: nginx
       become: yes
@@ -154,3 +194,15 @@
         mode: 0644
       notify: Reload Nginx
       become: yes
+
+    - name: Test Nginx configuration
+      ansible.builtin.command: nginx -t
+      register: nginx_test
+      changed_when: false
+      tags: nginx
+      become: yes
+
+    - name: Display Nginx test result
+      ansible.builtin.debug:
+        var: nginx_test.stdout
+      tags: nginx
