--- a/ansible/roles/web/vars/main.yml
+++ b/ansible/roles/web/vars/main.yml
@@ -7,6 +7,7 @@ web_directories:
 nginx_domains:
   - site1.example.com
   - site2.example.com
+  - main.local
 
 web_root: /var/www
 certbot_email: admin@example.com
