--- a/ansible/roles/web/vars/main.yml
+++ b/ansible/roles/web/vars/main.yml
@@ -3,12 +3,11 @@ web_directories:
   - /var/www/site2
   - /var/log/nginx/sites
   - /var/www/main
+  - /var/www/admin
 
 nginx_domains:
   - site1.example.com
   - site2.example.com
-  - main.local
 
 web_root: /var/www
-certbot_email: admin@example.com
-admin_network: 192.168.1.0/24
+admin_network: 127.0.0.1
